--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
+    "axios": "^1.7.2",
     "electron-updater": "^6.1.7",
     "pinia": "^2.2.0",
     "vue-router": "^4.4.0"
