feat: 账号密码登录

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -15,6 +15,12 @@
       ],
       "@store/*": [
         "src/renderer/src/store/*"
+      ],
+      "@views/*": [
+        "src/render/src/views/*"
+      ],
+      "@components/*": [
+        "src/render/src/components/*"
       ]
     }
   }
