--- a/package.json
+++ b/package.json
@@ -24,14 +24,19 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "axios": "^1.7.2",
+    "crypto-js": "^4.2.0",
     "electron-updater": "^6.1.7",
     "pinia": "^2.2.0",
-    "vue-router": "^4.4.0"
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-router": "^4.4.0",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@mdi/font": "^7.4.47",
     "@rushstack/eslint-patch": "^1.10.3",
     "@types/node": "^20.14.8",
     "@vitejs/plugin-vue": "^5.0.5",
@@ -45,6 +50,7 @@
     "eslint-plugin-vue": "^9.26.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.2",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.2",
     "vite": "^5.3.1",
