--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pinia": "^2.2.0",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vite-plugin-vuetify": "^2.0.3",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.0",
     "vuetify": "^3.6.14"
   },
